--- a/quiz/templates/quiz/base.html
+++ b/quiz/templates/quiz/base.html
@@ -5,11 +5,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
   <link rel="stylesheet" href="{% static 'css/base.css'%}" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="icon" type="image/svg+xml" href="{% static '/img/logo_mytcell (1.png' %}" sizes="64x64">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   {%block css%}{%endblock css%}
   {%block title%}{%endblock title%}
 </head>
@@ -18,7 +19,30 @@
 
 
 <body class="w-100 h-100">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+  }
+  </style>
     <header class="background col-12">
+        {%if user.is_authenticated and user.is_staff%}
+        <a href="{%url 'home'%}" style="text-decoration: none; padding: 17px" class="buttonLogo col-2">
+          <img width="170" height="50" src="{% static '/img/tcell_logo.svg' %}" alt="" />
+        </a>
+        <span class="dropdown float-end">
+
+            <button class="buttonSvg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <span style="color: white;">{{user.email}}</span><i style="padding-left: 10px; padding-right: 10px" class="bi bi-person-circle">
+              </i>
+            </button>
+            <ul style="transition: 0.3s;" class="dropdown-menu">
+              <li><a class="dropdown-item" href="{%url 'admin_profile'%}">Мой профиль</a></li>
+              <li><a class="dropdown-item" href="{%url 'admin_index'%}">Настройка тестов</a></li>
+              <li><a class="dropdown-item" href="#">Настройка опросов</a></li>
+              <li style="border-top: 1px solid black;"><a class="dropdown-item" href="{%url 'logout'%}">Выход</a></li>
+            </ul>
+          </span>
+        {%elif user.is_authenticated%}
         <a href="{%url 'home'%}" style="text-decoration: none; padding: 17px" class="buttonLogo col-2">
           <img width="170" height="50" src="{% static '/img/tcell_logo.svg' %}" alt="" />
         </a>
@@ -28,21 +52,29 @@
         <a href="" style="text-decoration: none; padding: 17px" class="buttonSvg col-1">
           <i class="bi bi-card-checklist"> Опросы</i>
         </a>
-        {%if user.is_authenticated%}
         <span class="dropdown float-end">
-        <!-- <span style="color: white;">{{user.email}}</span> -->
+
           <button class="buttonSvg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <i style="padding-left: 10px; padding-right: 10px" class="bi bi-person-circle">
+            <span style="color: white;">{{user.email}}</span><i style="padding-left: 10px; padding-right: 10px" class="bi bi-person-circle">
             </i>
           </button>
           <ul style="transition: 0.3s;" class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Мои настройки</a></li>
-            <li><a class="dropdown-item" href="#">Мои тесты</a></li>
+            <li><a class="dropdown-item" href="{%url 'index'%}">Мои тесты</a></li>
             <li><a class="dropdown-item" href="#">Мои опросы</a></li>
             <li style="border-top: 1px solid black;"><a class="dropdown-item" href="{%url 'logout'%}">Выход</a></li>
           </ul>
         </span>
         {%else%}
+        <a href="{%url 'home'%}" style="text-decoration: none; padding: 17px" class="buttonLogo col-2">
+          <img width="170" height="50" src="{% static '/img/tcell_logo.svg' %}" alt="" />
+        </a>
+        <a href="{%url 'index'%}" style="margin-left: 50px; text-decoration: none; padding: 17px" class="buttonSvg col-1">
+          <i class="bi bi-card-list"> Тесты</i>
+        </a>
+        <a href="" style="text-decoration: none; padding: 17px" class="buttonSvg col-1">
+          <i class="bi bi-card-checklist"> Опросы</i>
+        </a>
         <a href="{%url 'login'%}" style="text-decoration: none; padding-top: 10px"
           class="buttonSvg col-1 float-end text-center">
           <i class="bi bi-key-fill"> Вход</i>
@@ -53,7 +85,7 @@
     {% block content %}
 
     {% endblock content%}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
     {% block scripts %}
     {% endblock scripts%}
 
@@ -65,5 +97,4 @@
 </html>
 
 
-</html>
 
