--- a/quiz/templates/quiz/index.html
+++ b/quiz/templates/quiz/index.html
@@ -24,9 +24,9 @@
     </div>
 </div>
 <div class="container">
-    <div class="row">
+    <div class="row" >
         {% for category in categories %}
-        <div style="border-radius: 5px;" class="col-sm-4">
+        <div style="border-radius: 5px; padding-bottom:30px" class="col-sm-4">
             <div class="card">
                 <h5 class="card-title title-background" 
                      style=" padding: 10px; {% if category.image %}border-top-right-radius: 5px; border-top-left-radius: 5px;  height: 300px; background-image: url('{{ category.image.url }}');{% endif %}">
@@ -53,7 +53,5 @@
 {% endblock content%}
 
 {%block scripts%}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+
 {%endblock scripts%}
