--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -147,7 +147,12 @@
     </div>
     <div class="text-center">
         <input class="submit-button" type="submit" style="border-radius: 5px;" value="Отправить ответ">
-        <button type="submit" name="skip" value="true">Пропустить вопрос</button>
+        <!-- <button type="submit" name="skip" value="true">Пропустить вопрос</button> -->
     </div>
 </form>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous">
+</script>
 {% endblock content %}
