--- a/quiz/templates/quiz/viktorin.html
+++ b/quiz/templates/quiz/viktorin.html
@@ -3,46 +3,107 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+
+    
     <title>Викторина</title>
     <link rel="icon" type="image/svg+xml" href="{% static '/img/tcell_logo.svg' %}" sizes="64x64">
-    <link rel="stylesheet" href="{% static '/css/viktorin.css' %}">
-    <link rel="stylesheet" href="{% static 'css/base.css'%}" />
+    <link rel="stylesheet" href="{% static 'css/viktorin.css' %}">
+  
+    <style>
+      body {
+          font-family: Arial, sans-serif;
+          margin: 0;
+          padding: 0;
+          background-color: #f4f4f4;
+      }
+      header {
+          background-color: #333;
+          color: #ffffff;
+          margin-bottom: 15px;
+      }
+      h2 {
+          color: #333;
+      }
+      .formset-form {
+          background-color: #ffffff;
+          margin-bottom: 15px;
+          padding: 20px;
+          border-radius: 5px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+      footer {
+          background-color: #333;
+          color: #ffffff;
+          text-align: center;
+          padding: 10px 0;
+          position: fixed;
+          width: 100%;
+          bottom: 0;
+      }
+  </style>
 </head>
 <body>
-    <header class="background col-12">
-        <a href="{%url 'home'%}" style="text-decoration: none; padding: 17px" class="buttonLogo col-2">
-          <img width="170" height="50" src="{% static '/img/tcell_logo.svg' %}" alt="" />
-        </a>
-        <a href="{%url 'index'%}" style="margin-left: 50px; text-decoration: none; padding: 17px" class="buttonSvg col-1">
-          <i class="bi bi-card-list"> Тесты</i>
-        </a>
-        <a href="" style="text-decoration: none; padding: 17px" class="buttonSvg col-1">
-          <i class="bi bi-card-checklist"> Опросы</i>
-        </a>
-        {%if user.is_authenticated%}
-        <span class="dropdown float-end">
-        <!-- <span style="color: white;">{{user.email}}</span> -->
-          <button class="buttonSvg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <i style="padding-left: 10px; padding-right: 10px" class="bi bi-person-circle">
-            </i>
-          </button>
-          <ul style="transition: 0.3s;" class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Мои настройки</a></li>
-            <li><a class="dropdown-item" href="#">Мои тесты</a></li>
-            <li><a class="dropdown-item" href="#">Мои опросы</a></li>
-            <li style="border-top: 1px solid black;"><a class="dropdown-item" href="{%url 'logout'%}">Выход</a></li>
-          </ul>
-        </span>
-        {%else%}
-        <a href="{%url 'login'%}" style="text-decoration: none; padding-top: 10px"
-          class="buttonSvg col-1 float-end text-center">
-          <i class="bi bi-key-fill"> Вход</i>
-        </a>
-        {%endif%}
-      </header>
-    <div>
+  <header class="background col-12">
+    {%if user.is_authenticated and user.is_staff%}
+    <a href="{%url 'home'%}" style="text-decoration: none; padding: 17px" class="buttonLogo col-2">
+      <img width="170" height="50" src="{% static '/img/tcell_logo.svg' %}" alt="" />
+    </a>
+    <span class="dropdown float-end">
+
+        <button class="buttonSvg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <span style="color: white;">{{user.email}}</span><i style="padding-left: 10px; padding-right: 10px" class="bi bi-person-circle">
+          </i>
+        </button>
+        <ul style="transition: 0.3s;" class="dropdown-menu">
+          <li><a class="dropdown-item" href="{%url 'admin_profile'%}">Мой профиль</a></li>
+          <li><a class="dropdown-item" href="{%url 'admin_index'%}">Настройка тестов</a></li>
+          <li><a class="dropdown-item" href="#">Настройка опросов</a></li>
+          <li style="border-top: 1px solid black;"><a class="dropdown-item" href="{%url 'logout'%}">Выход</a></li>
+        </ul>
+      </span>
+    {%elif user.is_authenticated%}
+    <a href="{%url 'home'%}" style="text-decoration: none; padding: 17px" class="buttonLogo col-2">
+      <img width="170" height="50" src="{% static '/img/tcell_logo.svg' %}" alt="" />
+    </a>
+    <a href="{%url 'index'%}" style="margin-left: 50px; text-decoration: none; padding: 17px" class="buttonSvg col-1">
+      <i class="bi bi-card-list"> Тесты</i>
+    </a>
+    <a href="" style="text-decoration: none; padding: 17px" class="buttonSvg col-1">
+      <i class="bi bi-card-checklist"> Опросы</i>
+    </a>
+    <span class="dropdown float-end">
+
+      <button class="buttonSvg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <span style="color: white;">{{user.email}}</span><i style="padding-left: 10px; padding-right: 10px" class="bi bi-person-circle">
+        </i>
+      </button>
+      <ul style="transition: 0.3s;" class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Мои настройки</a></li>
+        <li><a class="dropdown-item" href="{%url 'index'%}">Мои тесты</a></li>
+        <li><a class="dropdown-item" href="#">Мои опросы</a></li>
+        <li style="border-top: 1px solid black;"><a class="dropdown-item" href="{%url 'logout'%}">Выход</a></li>
+      </ul>
+    </span>
+    {%else%}
+    <a href="{%url 'home'%}" style="text-decoration: none; padding: 17px" class="buttonLogo col-2">
+      <img width="170" height="50" src="{% static '/img/tcell_logo.svg' %}" alt="" />
+    </a>
+    <a href="{%url 'index'%}" style="margin-left: 50px; text-decoration: none; padding: 17px" class="buttonSvg col-1">
+      <i class="bi bi-card-list"> Тесты</i>
+    </a>
+    <a href="" style="text-decoration: none; padding: 17px" class="buttonSvg col-1">
+      <i class="bi bi-card-checklist"> Опросы</i>
+    </a>
+    <a href="{%url 'login'%}" style="text-decoration: none; padding-top: 10px"
+      class="buttonSvg col-1 float-end text-center">
+      <i class="bi bi-key-fill"> Вход</i>
+    </a>
+    {%endif%}
+  </header>
+      <div class="text-center">
         <h1>Добро пожаловать на викторину!</h1>
     </div>
 
@@ -50,12 +111,16 @@
         <form method="POST">
             {% csrf_token %}
             {% for question, correct_answer in questions %}
-                <div>
-                    <label for="{{ question }}">{{ question }}</label>
+            <div class="d-flex justify-content-center">
+                <div class="formset-form">
+                    <label style="color: black;" for="{{ question }}">{{ question }}</label>
                     <input type="text" id="{{ question }}" name="{{ question }}">
                 </div>
+              </div>
             {% endfor %}
-            <button type="submit">Отправить ответы</button>
+            <div  class="d-flex justify-content-center">
+            <button  style="border-radius: 10px;" type="submit">Отправить ответы</button>
+          </div>
         </form>
 
         {% if score is not None %}
@@ -74,5 +139,6 @@
     <footer>
         © 2023 Мой сайт
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
