--- a/adminPage/templates/adminPage/admin_profile.html
+++ b/adminPage/templates/adminPage/admin_profile.html
@@ -11,6 +11,8 @@
   <link rel="icon" type="image/svg+xml" href="{% static '/img/logo_mytcell (1.png' %}" sizes="64x64">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <title>Admin Profile</title>
 </head>
 
