--- a/adminPage/templates/adminPage/create_category.html
+++ b/adminPage/templates/adminPage/create_category.html
@@ -38,9 +38,16 @@
     .question-form input[type="text"],
     .question-form input[type="number"],
     .question-form input[type="file"],
-    .question-form select,
-    .question-form textarea {
+    .question-form select{
       width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      margin-bottom: 10px;
+    }
+    textarea {
+      width: 100%;
+      height: 150px;
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 5px;
