--- a/adminPage/templates/adminPage/no_admin_category.html
+++ b/adminPage/templates/adminPage/no_admin_category.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 
-<div  class="d-flex align-item-center justify-content-center"><h3 class="p-5">{{title1}} </h3></div>
+<div  class="d-flex align-item-center justify-content-center"><h3 class="p-2">{{title1}} </h3></div>
 
-<div class="d-flex justify-content-center">
+<div class="my-5 d-flex justify-content-center">
   <a href="{% url 'admin_profile'%}" class="mx-5 btn btn-primary">Назад</a>
   <button id="toggleButton" class="mx-5  btn btn-primary">Добавить тест</button>
   </div>
